fix(OptionsMenu): add spacing between focus outline and border

--- a/packages/styles/options-menu.css
+++ b/packages/styles/options-menu.css
@@ -82,7 +82,8 @@
 }
 
 .OptionsMenu__list-item:focus {
-  box-shadow: inset 0 0 0 2px var(--focus);
+  box-shadow: inset 0 0 0 1px var(--options-menu-hover-background-color),
+    inset 0 0 0 3px var(--focus);
 }
 
 .OptionsMenu__list-item[aria-disabled='true'] {
